feature: delete NSWAG
