# PACHA_FIT/docs/openapi.yaml
@@ -62,6 +62,11 @@ paths:
           required: false
           schema:
             type: string
+        - name: userName
+          in: query
+          required: false
+          schema:
+            type: string
       responses:
         '200':
           description: OK
